@@ -1,5 +1,6 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+#33, #34 Fix issue with multi byte (UTF-8) sequences returning empty content.
 #36 Fix ID clashes in component.
 
 ++++++++++++++++++++++++++++++++
